# HarvestX_ICP_Hackathon

./: HarvestX_backend.did  README.md  dfx.json  package-lock.json  package.json  tsconfig.json
src/HarvestX_backend/: Cargo.toml  HarvestX_backend.did
src/HarvestX_backend/src/: lib.rs  types.rs
src/HarvestX_frontend/: package-lock.json  package.json  tsconfig.app.json
src/HarvestX_frontend/public/: index.html
src/HarvestX_frontend/src/: App.js  App.tsx  index.css
src/HarvestX_frontend/src/components/: HeroSection.tsx  ICPStatus.tsx  InvestmentRequestDialog.tsx  Navigation.tsx
src/HarvestX_frontend/src/hooks/: useICP.ts
src/HarvestX_frontend/src/pages/: CreateListing.tsx  FarmerDashboard.tsx  Home.tsx  InvestorDashboard.tsx  Marketplace.tsx  Profile.tsx  Register.tsx
src/HarvestX_frontend/src/services/: icpService.ts
