[package]
name = "HarvestX_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ic-cdk-macros]
version = "0.9"

[features]
default = []